2004-01-02  Remi Mommsen  <remigius.mommsen@cern.ch>

	* PkgVersion.pm: Modified method get_splitoffs to return list of
	splitoff packages, not just names. No need for passing package
	name to method belonging to a package. Moved method to other
	accessor methods.
	* Engine.pm: Modification to use changed get_splitoffs method.

2004-01-01  Remi Mommsen  <remigius.mommsen@cern.ch>

	* PkgVersion.pm: Added two methods to access lists of sources and 
	tarballs used by given package

2004-01-01  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* all: updated Copyright notice

2003-12-30  Daniel Macks  <dmacks@netspace.org>

	* Configure.pm,Engine.pm,Mirror.pm,NetAccess.pm,PkgVersion.pm,SelfUpdate.pm:
	Completed prompt_selection -> prompt_selection_new migration.
	* Services.pm: prompt_selection deprecated in favor of ..._new so
	don't export.
	
2003-12-29  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: prompt_selection_new(): forgot to deal with
	unspecified or invalid default choice.
	* Configure.pm: Switch from using prompt_selection to
	prompt_selection_new.
	
2003-12-28  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Type:splitoff is redundant: switch to checking
	for presence of parent link. Now okay to use Type in splitoffs
	(else inherits from parent). Added Type:none to clear.
	* Validation.pm: Allow Type:none. Allow Type and UpdatePOD in
	splitoffs.
	
2003-12-26  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Services.pm: *don't* export "read_properties_lines".
	Instead, introduce new subroutines "read_properties_multival_var"
	and "read_properties_multival_lines", the first of which is exported.
	* Mirror.pm: use "read_properties_multival_var" when setting 
	default values for mirrors.

2003-12-26  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Mirror.pm: setting default values for rsync and sourceforge 
	mirror sets, as well as master mirror set, in case the mirror
	directory is absent or damaged.
